# person_tracking_bebop

./: .gitignore  CMakeLists.txt  README.md  package.xml
aux_files/: head_pose_estimation.cpp  ros_head_pose_estimator.cpp  uav_controller.hpp
bebop_visnav/: CMakeLists.txt  package.xml
bebop_visnav/src/: DroneController.h  bebop_control.cpp
launch/: bebop_indiv_no_kinect.launch
src/: DroneController.cpp  bebop_control.cpp
